--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 rocket = "0.5.0-rc"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+diesel = { version = "1.4.4", features = ["sqlite"] }
+dotenv = "0.15.0"
